Update info.plist for iOS and MacOS

--- a/src/AwesomeSolution/AwesomeApp/AwesomeApp.macOS/Info.plist
+++ b/src/AwesomeSolution/AwesomeApp/AwesomeApp.macOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>AwesomeApp.macOS</string>
+	<string>HackedApp.macOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.LancelotSoftware.AwesomeApp</string>
+	<string>com.LancelotSoftware.HackedApp</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
